fix header border && content spacing

--- a/musketeers-page/src/components/header.css
+++ b/musketeers-page/src/components/header.css
@@ -32,6 +32,7 @@
     margin: 0.5em;
     font-size: 1.2em;
     border: none;
+    outline: none;
     cursor: pointer;
   }
   .dropdown-nav {
@@ -44,6 +45,7 @@
     position: absolute;
     right: auto;
     background-color: antiquewhite;
+    padding-left: 1em;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1
